--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,7 +11,7 @@ body {
 header {
   height: 100vh;
 }
-.img-arrow{
+.img-arrow {
   margin: 50px;
 }
 .header-card {
@@ -42,6 +42,14 @@ header {
   margin: 60px auto 25px;
 }
 
+.student-img {
+  width: 400px;
+  display: block;
+  margin: 60px auto 25px;
+  border-radius: 2%;
+  background-color: black;
+}
+
 .info-card {
   background: rgba(34, 30, 31, 0.65);
   color: white;
@@ -52,4 +60,45 @@ section .card-text {
   padding: 20px 0;
   text-align: justify;
   border-top: solid 1px grey;
+}
+
+.flip-card {
+  background-color: transparent;
+  width: 400px;
+  height: 300px;
+  perspective: 1000px;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); */
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+.flip-card-back {
+  background-color: #2980b9;
+  color: white;
+  transform: rotateY(180deg);
 }
