--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -63,14 +63,13 @@ section .card-text {
 
 .flip-card {
   background-color: transparent;
-  height: 700px;
   perspective: 1000px;
 }
 
 .flip-card-inner {
   position: relative;
-  width: 100%;
-  height: 700px;
+  /* width: 100%; */
+  height: 800px;
   transition: transform 0.6s;
   transform-style: preserve-3d;
 }
@@ -82,14 +81,15 @@ section .card-text {
 .flip-card-front,
 .flip-card-back {
   position: absolute;
-  width: 100%;
-  height: 700px;
+  /* width: 100%; */
+  height: 800px;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
 
 .flip-card-front {
   color: black;
+  height: 800px;
 }
 
 .flip-card-back {
@@ -110,4 +110,8 @@ section .card-text {
   justify-content: center;
   flex-direction: column;
   align-items: center;
+}
+
+.card {
+  height: 800px;
 }
