--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,112 +1,214 @@
-body {
-  background: #bbd2c5;
-  background: -webkit-linear-gradient(to bottom, #536976, #bbd2c5);
-  background: linear-gradient(to bottom, #536976, #bbd2c5);
-  background-attachment: fixed;
-}
-.center-text {
-  text-align: center;
+@font-face {
+  font-family: 'source_code_proextralight';
+  src        : url('sourcecodepro-extralight-webfont.woff2') format('woff2'),
+      url('sourcecodepro-extralight-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style : normal;
+
 }
 
-.img-arrow {
-  margin: 50px;
+@font-face {
+  font-family: 'source_code_prolight';
+  src        : url('sourcecodepro-light-webfont.woff2') format('woff2'),
+      url('sourcecodepro-light-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style : normal;
+
+}
+
+@font-face {
+  font-family: 'source_code_proregular';
+  src        : url('sourcecodepro-regular-webfont.woff2') format('woff2'),
+      url('sourcecodepro-regular-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style : normal;
+
+}
+
+@font-face {
+  font-family: 'source_code_prosemibold';
+  src        : url('sourcecodepro-semibold-webfont.woff2') format('woff2'),
+      url('sourcecodepro-semibold-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style : normal;
+
+}
+
+@font-face {
+  font-family: 'source_code_problack';
+  src        : url('sourcecodepro-black-webfont.woff2') format('woff2'),
+      url('sourcecodepro-black-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style : normal;
+
+}
+
+@font-face {
+  font-family: 'source_code_probold';
+  src        : url('sourcecodepro-bold-webfont.woff2') format('woff2'),
+      url('sourcecodepro-bold-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style : normal;
+}
+
+html { 	scroll-behavior: smooth;  }
+
+/* remove all browser margin/padding  */
+html, body, div, span, applet, object,
+iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
+pre, a, abbr, acronym, address, big, cite,
+code, del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var, b,
+u, i, center, dl, dt, dd, ol, ul, li, fieldset,
+form, label, legend, table, caption, tbody,
+tfoot, thead, tr, th, td, article, aside,
+canvas, details, embed, figure, figcaption,
+footer, header, hgroup, menu, nav, output, ruby,
+section, summary, time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+body {
+  /* background: #bbd2c5; */
+  /* background: -webkit-linear-gradient(to bottom, #536976, #bbd2c5);
+  background: linear-gradient(to bottom, #536976, #bbd2c5); */
+  background-image: url("../images/1657858.jpg");
+  background-size:cover;
+  background-position: bottom center;
+  /* background-repeat: repeat; */
+  background-attachment: fixed;
+  font-family             : 'source_code_proregular';
+}
+.header-height {
+  margin: auto;
+  width: 98vw;
+  display: flex;
+  flex-wrap:wrap;
+  flex-direction: column;
+  height: 100vh;
 }
 .header-card {
+  font-size: 2rem;
+  width: 20vw;
   margin: auto;
   padding: 50px;
-  background-color: rgba(34, 30, 31, 0.65);
+  background-color: rgba(34, 30, 31, .5);
   color: white;
 }
 
-.section-height {
-  min-height: 100vh;
-}
-
-.row-dimension {
-  width: 80vw;
+a.header {
+  text-decoration: none;
+  width: fit-content;
+  color:#fff;
   margin: auto;
 }
 
-#info-section {
-  padding-top: 50px;
+.rounded-border {
+  border-radius: 2%;
 }
 
+.boxshadow {
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.Down-Arrow {
+  display: flexbox;
+  margin: auto auto 5vh;
+}
+
+.info-container {
+  width: 98vw;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
 .info-card {
-  background: rgba(34, 30, 31, 1);
+  background: rgba(34, 30, 31, .75);
   color: white;
-  min-height: 700px;
-}
-
-.card-width {
   width: 40vw;
+  min-width: 300px;
+  margin: 50px auto 0;
 }
-
 .card-img-top {
   width: 35%;
   display: block;
   margin: 60px auto 25px;
 }
-
-.student-img {
-  width: 80%;
-  display: block;
-  margin: 60px auto 25px;
-  border-radius: 2%;
-  background-color: black;
+.section-height {
+  display: flex;
+  flex-wrap:wrap;
+  flex-direction: column;
+  height: 100vh;
 }
-
-#student-section {
-  padding-top: 50px;
+.center {
+  text-align: center;
+  vertical-align: middle;
+  margin: auto;
 }
-
-.student-card {
-  padding-top: 5px;
-  background: rgba(34, 30, 31, 1);
-  color: white;
-  height: 750px;
+.center-text {
+  text-align: center;
 }
-
 section .card-text {
   margin: 20px;
   padding: 20px 0;
   text-align: justify;
   border-top: solid 1px grey;
 }
-
-.flip-card {
-  background-color: transparent;
-  perspective: 1000px;
+#student-section {
+  padding-top: 50px;
 }
-
-.flip-card-inner {
+.students {
+  width: 90vw;
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.student-card {
+  padding-top: 5px;
+  background: rgba(34, 30, 31, .75);
+  color: white;
+  height: 750px;
+}
+.student-img {
+  width: 80%;
+  display: block;
+  margin: 60px auto 25px;
+  border-radius: 2% 2% 2% 50%;
+}
+.card {
+  width: 100%;
+  height: fit-content;
   position: relative;
-  /* width: 100%; */
-  height: 800px;
-  transition: transform 0.6s;
+  transition: transform 1s;
   transform-style: preserve-3d;
+  margin: auto;
 }
-
-.flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
+.scene {
+  width: 400px;
+  height: 750px;
+  perspective: 600px;
+  margin: 0 0 5vh 0;
 }
-
-.flip-card-front,
-.flip-card-back {
+.card__face {
   position: absolute;
-  /* width: 100%; */
-  -webkit-backface-visibility: hidden;
+  height: 100%;
+  width: 100%;
   backface-visibility: hidden;
 }
-
-.flip-card-front {
-  color: black;
+.card__face--back {
+  transform: rotateY( 180deg );
 }
-
-.flip-card-back {
-  color: white;
-  transform: rotateY(180deg);
+.card.is-flipped {
+  transform: rotateY(-180deg);
 }
-
+.student {
+  margin: auto;
+}
 .social-icons {
   width: 50px;
   margin: 10px 0;
@@ -121,14 +223,28 @@ section .card-text {
   flex-direction: column;
   align-items: center;
 }
+.turn {
+  position: absolute;
+  /* transform: translate(0%,-200px); */
+  /* transform: scale(.2) rotate(180deg); */
+/* float: right; */
 
-@media (max-width: 767px) {
+}
+img.turn {
+  transform: translate(-32px,-430px);
+  width: 100px;;
+  opacity: 1;
+}
+/* @media (max-width: 767px) {
   .social-wrap {
     flex-direction: row;
     justify-content: space-around;
   }
+} */
+  @media (max-width: 612px){
 
-  .student-img {
-    width: 50%;
+    .section-height {
+      height: fit-content;
+    }
   }
-}
+ 
