--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -160,7 +160,7 @@ section .card-text {
 }
 section .student-text {
   height: 200px;
-  background: rgba(34, 30, 31, 0.7);
+  /* background: rgba(34, 30, 31, 0.7); */
   margin: 10px 20px 20px 20px;
   padding: 20px;
   text-align: left;
