--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -161,7 +161,7 @@ section .card-text {
 }
 section .student-text {
   height: 240px;
-  /* background: rgba(34, 30, 31, 0.7); */
+vertical-align:middle;
   margin: 10px 20px 20px 20px;
   padding: 20px;
   text-align: left;
@@ -183,13 +183,13 @@ overflow: hidden;
   padding-top: 5px;
   background: rgba(34, 30, 31, 0.7);
   color: white;
-  height: 675px;
+  height: 650px;
 }
 .student-img {
   width: 70%;
   display: block;
   margin: 40px auto 5px;
-  border-radius: 2% 2% 2% 50%;
+  border-radius: 10% 10% 10% 50%;
 }
 .card {
   width: 100%;
@@ -200,10 +200,10 @@ overflow: hidden;
   margin: auto;
 }
 .scene {
-  width: 400px;
-  height: 675px;
+  width: 380px;
+  height: 650px;
   perspective: 600px;
-  margin: 0 0 5vh 0;
+  margin: 0 10px 5vh 10px;
 }
 .card__face {
   position: absolute;
@@ -237,13 +237,13 @@ overflow: hidden;
 
 img.turn {
   position: absolute;
-  transform: translate(-32px,-370px);
+  transform: translate(-32px,-350px);
   width: 100px;
   backface-visibility: hidden;
 }
 img.turnb {
   /* position: absolute; */
-  transform: translate(322px,-350px);
+  transform: translate(302px,-330px);
   width: 100px;
   backface-visibility: hidden;
 }
