--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -183,13 +183,16 @@ overflow: hidden;
   padding-top: 5px;
   background: rgba(34, 30, 31, 0.7);
   color: white;
-  height: 650px;
+  height: 625px;
 }
 .student-img {
   width: 70%;
   display: block;
   margin: 40px auto 5px;
   border-radius: 10% 10% 10% 50%;
+}
+h2 {
+  font-size: 1.5rem;
 }
 .card {
   width: 100%;
@@ -201,7 +204,7 @@ overflow: hidden;
 }
 .scene {
   width: 380px;
-  height: 650px;
+  height: 625px;
   perspective: 600px;
   margin: 0 10px 5vh 10px;
 }
