--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -132,7 +132,7 @@ overflow: hidden;
 }
 .student-cardb {
   padding-top: 5px;
-  background: rgba(34, 30, 31, .0);
+  background: rgba(34, 30, 31, 0.9);
   /* border: 1px solid rgba(245,222,179,0); */
   color: white;
   height: 625px;
@@ -161,13 +161,13 @@ h2 {
   margin: 0 10px 5vh 10px;
   transition: 0.2s ease-in-out;
 }
-.scene:hover{  
+/* .scene:hover{  
   transform: scale(1.05);  
 }
 .student-card:hover{
     background-color:rgba(34, 30, 31, 0.9);
     box-shadow: rgba(255, 255,255, 0.25) 0px 54px 55px, rgba(255, 255, 255, 0.12) 0px -12px 30px, rgba(255, 255, 255, 0.12) 0px 4px 6px, rgba(255, 255, 255, 0.17) 0px 12px 13px, rgba(255, 255, 255, 0.09) 0px -3px 5px;
-}
+} */
 .card__face {
   position: absolute;
   height: 100%;
@@ -180,6 +180,12 @@ h2 {
 
 .card.is-flipped {
   transform: rotateY(-180deg);
+}
+.student-card.is-flipped {
+  transform: rotateY(-180deg);
+}
+.set-background {
+  background-color:rgba(34, 30, 31, 0.9);
 }
 .student {
   margin: auto;
