--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -126,14 +126,12 @@ overflow: hidden;
 .student-card {
   padding-top: 5px;
   background: rgba(34, 30, 31, 0.7);
-  /* border: 1px solid rgba(245,222,179,0); */
   color: white;
   height: 625px;
 }
 .student-cardb {
   padding-top: 5px;
-  background: rgba(34, 30, 31, 0.9);
-  /* border: 1px solid rgba(245,222,179,0); */
+  background: rgba(34, 30, 31, 0.7);
   color: white;
   height: 625px;
 }
@@ -161,13 +159,10 @@ h2 {
   margin: 0 10px 5vh 10px;
   transition: 0.2s ease-in-out;
 }
-/* .scene:hover{  
-  transform: scale(1.05);  
+ .scene:hover{  
+  transform: scale(1.02);  
 }
-.student-card:hover{
-    background-color:rgba(34, 30, 31, 0.9);
-    box-shadow: rgba(255, 255,255, 0.25) 0px 54px 55px, rgba(255, 255, 255, 0.12) 0px -12px 30px, rgba(255, 255, 255, 0.12) 0px 4px 6px, rgba(255, 255, 255, 0.17) 0px 12px 13px, rgba(255, 255, 255, 0.09) 0px -3px 5px;
-} */
+
 .card__face {
   position: absolute;
   height: 100%;
