javascript to main.js also back to top btn added

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,6 +30,13 @@ body {
   font-family: 'Raleway', sans-serif;
   overflow: overlay;
 }
+
+img.arrow-top {
+  width: 50px;
+  position: fixed;
+  bottom: 50px; 
+  right: 50px;
+}
 .header-height {
   margin: auto;
   display: flex;
