--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -269,6 +269,15 @@ img.turnb {
       padding-top: 0px;
         height: 700px;
     }
+    section .student-text {
+      height: 340px;
+    vertical-align:middle;
+      margin: 20px 20px;
+      padding: 10px 0px;
+      text-align: left;
+      border-top: solid 1px grey;
+    overflow: hidden;
+    }
     
   }
   .form-height {
