--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,7 +31,7 @@ body {
 @media screen and (max-width:800px) {
   body {
     background-image: url("../images/bg-nHD.jpg");
-      
+    background-size: contain !important;
     background-position: 0 50px !important;
   }
 }
