--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -141,6 +141,16 @@ section .card-text {
   text-align: left;
   border-top: solid 1px grey;
 }
+#student-section h3 {
+  border-bottom: solid 1px grey;
+  padding-bottom: 15px;
+  
+}
+#teachers-section h3 {
+  border-bottom: solid 1px grey;
+  padding-bottom: 15px;
+  
+}
 section .student-text {
   height: 260px;
   
@@ -260,6 +270,15 @@ h2 {
 }
 .student {
   margin: auto;
+  
+}
+.teacher-one {
+  margin-left: auto;
+margin-right: 30px;
+}
+.teacher-two {
+  margin-right: auto;
+  margin-left: 30px;
 }
 .social-icons {
   width: 50px;
@@ -275,7 +294,9 @@ h2 {
   flex-direction: row;
   justify-content: space-around;
 }
-
+.web-link {
+  width: 300px;
+}
 img.turn {
   position: absolute;
   transform: translate(-33px,-0px);
