--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,7 +32,8 @@ body {
   body {
     background-image: url("../images/bg-nHD.jpg");
     background-size: contain !important;
-    background-position: 0 50px !important;
+    background-position: bottom;
+    
     min-height: 100%;
 
 
