--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -84,11 +84,7 @@ a{
   transition: 0.4s ease-in-out;
 
 }
-.student-text img:hover{
-  transform: scale(1.5) rotate(360deg);
-  
-  
-}
+
 .rounded-border {
   border-radius: 2%;
 }
@@ -282,6 +278,15 @@ margin-right: 30px;
 .social-icons {
   width: 50px;
   margin: 10px 0;
+  
+}
+.social-icons:hover {
+  
+    transform: scale(1.5) rotate(360deg);
+    
+    
+  
+  
 }
 
 .social-wrap {
@@ -294,8 +299,14 @@ margin-right: 30px;
   justify-content: space-around;
 }
 .web-link {
-  width: 300px;
+  width: 230px;
+
 }
+.web-link:hover {
+  transform: scale(1.5) ;
+
+}
+
 img.turn {
   position: absolute;
   transform: translate(-33px,-0px);
