--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -82,7 +82,7 @@ a{
 }
 .student-text img{
 
-  transition: 0.4s ease-in-out;
+  transition: 0.1s ease-in-out;
 
 }
 
@@ -97,8 +97,15 @@ a{
 .Down-Arrow {
   display: flexbox;
   margin: auto auto 5vh;
-}
 
+
+}
+.Down-Arrow img{
+opacity: .7;
+}
+.Down-Arrow img:hover{
+  opacity: 1;
+}
 .info-container {
   
   display: flex;
@@ -137,6 +144,33 @@ section .card-text {
   text-align: left;
   border-top: solid 1px grey;
 }
+.card-right ul,li{
+
+margin-left: 20px;
+
+}
+
+.d-flex {
+display: flex;
+justify-content: space-between;
+
+}
+
+.d-flex ul{
+  margin-top: 10px;
+}
+
+@media (max-width : 1100px) {
+  .d-flex {
+    flex-direction: column;
+  }
+  }
+.card-right b{
+
+  /* font-size: xx-large; */
+  
+  }
+
 #student-section h3 {
   border-bottom: solid 1px grey;
   padding-bottom: 15px;
@@ -238,12 +272,12 @@ h2 {
 
 }
 
-/* .jens.scene{
+ /* .jens.scene{
   transition: 2s ease-in-out;
 }
 .jens.scene:hover{  
   transform: scale(0.2) rotate(3600deg);
-} */
+}  */
 
 .card__face {
   position: absolute;
@@ -283,7 +317,7 @@ margin-right: 30px;
 }
 .social-icons:hover {
   
-    transform: scale(1.5) rotate(360deg);
+    transform: scale(1.5) ;
     
     
   
