--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,11 +4,11 @@ html { 	scroll-behavior: smooth;  }
 
 /* remove all browser margin/padding  */
 html, body, div, span, applet, object,
-iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
+iframe, blockquote,
 pre, a, abbr, acronym, address, big, cite,
-code, del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var, b,
-u, i, center, dl, dt, dd, ol, ul, li, fieldset,
+code, del, dfn, img, ins, kbd, q, s, samp,
+small, strike, sub, sup, tt, var, b,
+u, i, center, dl, dt, dd, ol, fieldset,
 form, label, legend, table, caption, tbody,
 tfoot, thead, tr, th, td, article, aside,
 canvas, details, embed, figure, figcaption,
@@ -95,10 +95,7 @@ a{
 }
 
 .Down-Arrow {
-  display: flexbox;
   margin: auto auto 5vh;
-
-
 }
 .Down-Arrow img{
 opacity: .7;
@@ -106,23 +103,40 @@ opacity: .7;
 .Down-Arrow img:hover{
   opacity: 1;
 }
+.card-body {
+  min-width: fit-content;
+  width: 100%;
+  margin: 0 auto;
+}
 .info-container {
-  
+  width: 95vw;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  margin: auto;
+}
+.card-right {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 .info-card {
+  
   background: rgba(34, 30, 31, 0.6);
   color: white;
-  width: 40vw;
+  width: 45vw;
   min-width: 300px;
+  max-height: 80vh;
   margin: 50px auto 0;
 }
 .card-img-top {
-  width: 20%;
+  width: 175px;
   display: block;
   margin: 20px auto 20px;
+}
+.border-top {
+  border-top: solid 1px grey;
 }
 .section-height {
   display: flex;
@@ -139,37 +153,36 @@ opacity: .7;
   text-align: center;
 }
 section .card-text { 
-  margin: 20px  40px;
-  padding: 20px  0;
+  margin: 0px  20px;
+  padding: 0  0;
   text-align: left;
-  border-top: solid 1px grey;
 }
-.card-right ul,li{
-
-margin-left: 20px;
-
-}
-
-.d-flex {
-display: flex;
-justify-content: space-around;
-
-}
-
-.d-flex ul{
-  margin-top: 10px;
-}
-
-@media (max-width : 1100px) {
-  .d-flex {
+@media (max-width:1660px) {
+  .info-container {
     flex-direction: column;
   }
+  .section-height {
+    height: fit-content;
   }
+  .info-card {
+    width: 90vw;
+    height: fit-content;
+    max-height: none;
+  }
+}
+.vaardigheden1 {
+  min-width: 300px;
+}
+.vaardigheden2 {
+  min-width: 350px;
+
+}
 
 
 #student-section h3 {
   border-bottom: solid 1px grey;
   padding-bottom: 15px;
+  
   
 }
 #teachers-section h3 {
@@ -197,11 +210,12 @@ overflow: hidden;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 .teachers {
   width: 90vw;  
   display: flex;
-  margin:auto;
+  /* margin:auto; */
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
