--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -217,8 +217,13 @@ overflow: hidden;
   margin:auto;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: center;
 }
+.teachers .scene {
+  margin-left: 40px;
+  margin-right: 40px;
+}
+
 .students-card {
   font-size: 2rem;
   width: 20vw;
@@ -259,15 +264,12 @@ p {
   font-size: 1.1rem;
   line-height: 1.6rem;
 }
-p.Michiel {
-  line-height: 1.3rem;
 
-}
 h2 {
   padding-top: 10px;
   font-size: 1.5rem;
   margin-block-start: 0em;
-    margin-block-end: 0em;
+  margin-block-end: 0em;
 }
 .card {
   width: 100%;
@@ -316,7 +318,7 @@ h2 {
   background-color:rgba(34, 30, 31, 0.9);
 }
 .student {
-  margin: auto;
+  margin: 10px auto auto auto;
   
 }
 
