--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -191,14 +191,22 @@ section .card-text {
   }
 section .student-text {
   height: 260px;
-  
-
 vertical-align:middle;
   margin: 20px 20px;
   padding: 10px 0px;
   text-align: left;
   border-top: solid 1px grey;
 overflow: hidden;
+}
+section .student-hired {
+  color:red !important ; 
+  font-weight: bold; 
+  font-size: 40px; 
+  opacity: 40%; 
+  align-items: center; 
+  align-content: center ;
+  text-align: center;
+  
 }
 #student-section {
   padding-top: 50px;
